Moved all chapters to separate files

--- a/part-appendix.tex
+++ b/part-appendix.tex
@@ -1,293 +1,7 @@
 \part{Appendix}
 
-\chapter{Usual functions}
+\input{chapter-usual-functions}
 
-\section{The sinc function}
-\label{sinc}
+\input{chapter-dirac-and-pauli-matrices}
 
-In this document, the sinc function is defined by:
-\begin{equation*}
-\sinc{X} \eqdef \begin{cases}
-1 & \text{for $X = 0$} \\
-\sin{\pi X} / ( \pi X ) & \text{otherwise}
-\end{cases}
-\end{equation*}
-This function admits following integral expression:
-\begin{equation*}
-\sinc{X} = \frac 1 X \int_{-X/2}^{X/2} \exp{\i 2 \pi x} \dx
-\end{equation*}
-and is normalized by:
-\begin{equation*}
-\int_{-\infty}^{+\infty} \sinc{X} \dX = 1
-\end{equation*}
-
-\section{The esinc function}
-\label{esinc}
-
-In this document, the esinc function is defined by:
-\begin{equation*}
-\esinc{X} \eqdef \exp{\i \pi X} \sinc{X}
-\end{equation*}
-where the sinc function is defined as in appendix \ref{sinc}. This function admits following integral expression:
-\begin{equation*}
-\esinc{X} = \frac 1 X \int_0^X \exp{\i 2 \pi x} \dx
-\end{equation*}
-can be written:
-\begin{equation*}
-\esinc{X} = \frac{\sin{2 \pi X}}{2 \pi X} + \i \frac{1 - \cos{2 \pi X}}{2 \pi X}
-\end{equation*}
-and verifies:
-\begin{equation*}
-\esinc{-X} = \cc{\esinc{X}}
-\end{equation*}
-
-\section{Nascent delta functions}
-\label{delta}
-
-In this document, we make use of following nascent delta functions, which converge to the delta energy distribution for $t - t_0 \to \infty$:
-\begin{eqnarray*}
-\deltaE1{E} & \eqdef & \frac{t - t_0} \h \sinc{\frac{t - t_0} \h E} \\
-\deltaE2{E} & \eqdef & \frac{t - t_0} \h \sinc{\frac{t - t_0} \h E}^2
-\end{eqnarray*}
-where the sinc function is defined as in appendix \ref{sinc}. The square of the first one can be expressed in terms of the second one as:
-\begin{equation*}
-\deltaE1{E}^2 = \frac{t - t_0} \h \deltaE2{E}
-\end{equation*}
-
-We also make use of following family of functions converging to a distribution as $t - t_0 \to \infty$:
-\begin{equation*}
-\deltaE\PV{E} \eqdef 2 \frac{t - t_0} \h \esinc{\frac{t - t_0} \h E}
-\end{equation*}
-where the esinc function is defined as in appendix \ref{esinc}. Its limit is given by:
-\begin{equation*}
-\lim_{t - t_0 \to \infty} \deltaE\PV{E} = \delta(E) + \frac \i \pi \PV \left( \frac 1 E \right)
-\end{equation*}
-where the Cauchy principal value of $1/E$ is defined by its action on any test function $\phi(E)$ by:
-\begin{eqnarray*}
-\left( \PV \left( \frac 1 E \right), \phi(E) \right) & \eqdef & \PV \int_{-\infty}^{+\infty} \frac{\phi(E)}E \dE \\
-& = & \lim_{\varepsilon \to 0^+} \left( \int_{-\infty}^{-\varepsilon} \frac{\phi(E)}E \dE + \int_{\varepsilon}^{+\infty} \frac{\phi(E)}E \dE \right)
-\end{eqnarray*}
-
-\chapter{Dirac and Pauli matrices}
-
-\section{Pauli matrices}
-
-In this document, the Pauli matrices, which act canonically as endomorphisms of $\H^2$, are represented by:
-$$
-\begin{array}{ccc}
-\sigmat 1 \eqdef \matrix{0 & 1 \\ 1 & 0} &
-\sigmat 2 \eqdef \matrix{0 & -i \\ i & 0} &
-\sigmat 3 \eqdef \matrix{1 & 0 \\ 0 & -1}
-\end{array}
-$$
-These matrices verify the anticommutation relations:
-\begin{equation*}
-\left\{ \sigmat a, \sigmat b \right\} \eqdef \sigmat a \sigmat b + \sigmat b \sigmat a = 2 \delta_{a,b} I_2
-\end{equation*}
-
-\section{Dirac matrices}
-\label{Dirac matrices}
-
-In this document, the Dirac matrices, which act canonically as endomorphisms of $\H^4$, are represented by:
-$$
-\begin{array}{cc}
-\gammat 0 \eqdef \matrix{I_2 & 0 \\ 0 & -I_2} &
-\gammat 1 \eqdef \matrix{0 & \sigmat 1 \\ -\sigmat 1 & 0}
-\end{array}
-$$
-$$
-\begin{array}{cc}
-\gammat 2 \eqdef \matrix{0 & \sigmat 2 \\ -\sigmat 2 & 0} &
-\gammat 3 \eqdef \matrix{0 & \sigmat 3 \\ -\sigmat 3 & 0}
-\end{array}
-$$
-These matrices verify the anticommutation relations:
-\begin{equation*}
-\left\{ \gammat \mu, \gammat \nu \right\} \eqdef \gammat \mu \gammat \nu + \gammat \nu \gammat \mu = 2 \stthh g \mu \nu I_4
-\end{equation*}
-We will make use of the condensed vectorial notation:
-\begin{equation*}
-\gamvec \eqdef \matrix{ \gammat 1 \\ \gammat 2 \\ \gammat 3 }
-\end{equation*}
-
-\chapter{Spinor operators}
-
-\section{Photon spinor operators}
-\label{Photon spinors}
-
-In this document, we use following conventions for the polarization vectors of photons in the lattice reference frame:
-\begin{eqnarray*}
-\photonspin \q 1 & \eqdef & - \frac 1 {\sqrt 2} \frac 1 {\sqrt{\svc q 1^2 + \svc q 2^2}} \frac 1 q \matrix{ \svc q 1 \svc q 3 - \i \svc q 2 q \\ \svc q 2 \svc q 3 + \i \svc q 1 q \\ -( \svc q 1^2 + \svc q 2^2 ) } \\
-\photonspin \q {-1} & \eqdef & \frac 1 {\sqrt 2} \frac 1 {\sqrt{\svc q 1^2 + \svc q 2^2}} \frac 1 q \matrix{ \svc q 1 \svc q 3 + \i \svc q 2 q \\ \svc q 2 \svc q 3 - \i \svc q 1 q \\ -( \svc q 1^2 + \svc q 2^2 ) }
-\end{eqnarray*}
-For the special case of wave vectors $\q$ parallel to the third axis, we use the conventions:
-\begin{eqnarray*}
-\photonspin \q 1 & \eqdef & - \frac 1 {\sqrt 2} \matrix{ 1 \\ \i \svc q 3 / q \\ 0 } \\
-\photonspin \q {-1} & \eqdef & \frac 1 {\sqrt 2} \matrix{ 1 \\ - \i \svc q 3 / q \\ 0 }
-\end{eqnarray*}
-For the special case of the wave vector $\q = \sv 0$, we take $\photonspin \q \sp \eqdef \sv 0$. We extend this definition periodically to all $\q \in \ILD$ by $\photonspin \q \sp \eqdef \photonspin {\eqp \q} \sp$.
-
-The polarization vectors of photons verify the Coulomb gauge conditions:
-\begin{eqnarray*}
-\q \ssp \photonspin \q \sp & = & 0 \\
-\photonspin {\sv 0} \sp & = & \sv 0
-\end{eqnarray*}
-as well as, for $\q \neq \sv 0$, the orthogonality relations:
-\begin{equation*}
-\cphotonspin \q {\sp'} \ssp \photonspin \q \sp = \delta_{\sp',\sp}
-\end{equation*}
-One can also notice the relations:
-\begin{eqnarray*}
-\photonspin {- \q} \sp & = & \cphotonspin \q \sp \\
-\photonspin \q {- \sp} & = & - \cphotonspin \q \sp
-\end{eqnarray*}
-
-The photon annihilation and creation spinor operators, which act canonically as homomorphisms from $\H$ to $\H^3$, are defined for $\q \neq \sv 0$ by:
-\begin{eqnarray*}
-\tSAop \photon \q \sp & \eqdef & \left( ( 1 + 2 \N ) \a \right)^{-3/2} \sqrt{ \frac {\h \a} {8 \pi^2 \vpty \c q} } \photonspin \q \sp \aop \photon \q \sp \sqrt{\Nop \photon \q \sp} \\
-\tSCop \photon \q \sp & \eqdef & \left( ( 1 + 2 \N ) \a \right)^{-3/2} \sqrt{ \frac {\h \a} {8 \pi^2 \vpty \c q} } \cphotonspin \q \sp \cop \photon \q \sp \sqrt{1 + \Nop \photon \q \sp}
-\end{eqnarray*}
-where $\vpty$ is the permittivity of the bare vacuum. For $\q = \sv 0$, we take $\tSAop \photon \q \sp = \sv 0$ and $\tSCop \photon \q \sp = \sv 0$. The spinor operators can also be defined on the position basis by:
-\begin{eqnarray*}
-\tSAop \photon \n \sp & \eqdef & \sum_{\q} \exp{\i 2 \pi \n \ssp \q} \tSAop \photon \q \sp \\
-\tSCop \photon \n \sp & \eqdef & \sum_{\q} \exp{-\i 2 \pi \n \ssp \q} \tSCop \photon \q \sp
-\end{eqnarray*}
-We extend these definitions periodically to all $\q \in \ILD$ by $\tSAop \photon \q \sp \eqdef \tSAop \photon {\eqp \q} \sp$ and $\tSCop \photon \q \sp \eqdef \tSCop \photon {\eqp \q} \sp$.
-
-We will make use following condensed notation, representing a matrix acting canonically as an endomorphism of $\H^4$:
-\begin{equation*}
-\gamvec \ssp \photonspin \q \sp \eqdef \svc {(\photonspin \q \sp)} 1 \gammat 1 + \svc {(\photonspin \q \sp)} 2 \gammat 2 + \svc {(\photonspin \q \sp)} 3 \gammat 3
-\end{equation*}
-
-\section{Fermion antisymmetrization operators}
-\label{Antisymmetrization operators}
-
-Let us define first a standard order on $\FLD$, for instance the total order relation given by $\q < \q'$ if and only if one of the following assertions holds:
-\begin{equation*}
-\begin{aligned}[c]
-q_1 < q_1'
-\end{aligned}
-\hspace{1cm}
-\begin{aligned}[c]
-\begin{cases}
-q_1 = q_1' \\
-q_2 < q_2'
-\end{cases}
-\end{aligned}
-\hspace{1cm}
-\begin{aligned}[c]
-\begin{cases}
-q_1 = q_1' \\
-q_2 = q_2' \\
-q_3 < q_3'
-\end{cases}
-\end{aligned}
-\end{equation*}
-This allows us to label the particles of any field $(\pt, \sp)$ present in a plane wave state $\ket{\bFQ N \pt \q \sp}$ in a standard way, using a standard particle numbering function $\Pn \pt \sp$ defined by:
-\begin{equation*}
-\Pn \pt \sp \left( \bFQ N \pt \q \sp \right) \eqdef (\q_1, \q_2, \dotsc, \q_{N^\pt_\sp})
-\end{equation*}
-\begin{equation*}
-\begin{cases}
-\q_1 \leq \q_2 \leq \dotsc \leq \q_{N^\pt_\sp} \\
-\left| \{ i | \q_i = \q \} \right| = \bQ N \pt \q \sp
-\end{cases}
-\end{equation*}
-The fermion antisymmetrization operators $\Faop \pt \q \sp$ can be defined conventionally with the help of this standard particle numbering function by their action on the momentum basis:
-\begin{eqnarray*}
-\Faop \pt \q \sp \ket{\bFQ N \pt \q \sp} & \eqdef & (-1)^\sigma \ket{\bFQ N \pt \q \sp} \\
-\sigma & = & \left| \{ i | \q_i \leq \q \} \right| \\
-(\q_i) & = & \Pn \pt \sp \left( \bFQ N \pt \q \sp \right)
-\end{eqnarray*}
-These hermitian, unitary operators are always used together with the corresponding creation and annihilation operators for fermion fields. They verify following essential anticommutation properties, where the anticommutation notation $\{\cdot, \cdot\}$ is defined by $\{ \op a, \op b\} \eqdef \op a \op b + \op b \op a$:
-\begin{equation*}
-\{\Faop \pt \q \sp, \aop \pt \q \sp\} = 0
-\end{equation*}
-\begin{equation*}
-\{\Faop \pt \q \sp \aop \pt \q \sp, \Faop \pt {\q'} \sp \aop \pt {\q'} \sp\} = 0
-\end{equation*}
-\begin{equation*}
-\{\cop \pt \q \sp \Faop \pt \q \sp, \cop \pt {\q'} \sp \Faop \pt {\q'} \sp\} = 0
-\end{equation*}
-\begin{equation*}
-\{\Faop \pt \q \sp \aop \pt \q \sp, \cop \pt {\q'} \sp \Faop \pt {\q'} \sp\} = \delta_{\q,\q'}
-\end{equation*}
-
-\section{Dirac spinor operators}
-\label{Dirac spinors}
-
-In this document, we use following conventions for the Dirac spinors in the lattice reference frame (for charged leptons $\pt \in \{ \electron, \muon, \tauon \}$, neutrinos $\pt \in \{ \neutrinoelectron, \neutrinomuon, \neutrinotauon \}$ and quarks $\pt \in \{ \quarkup, \quarkcharm, \quarktop, \quarkdown, \quarkstrange, \quarkbottom \}$):
-\begin{eqnarray*}
-\dirspin \pt \q {1/2} & \eqdef & \sqrt{\frac 1 2 \left( 1 + \frac {\mp \pt \c^2} E \right)} \matrix{1 \\ 0 \\ p_3 / \left( \mp \pt \c + E / \c \right) \\ \left( p_1 + i p_2 \right) / \left( \mp \pt \c + E / \c \right)} \\
-\dirspin \pt \q {-1/2} & \eqdef & \sqrt{\frac 1 2 \left( 1 + \frac {\mp \pt \c^2} E \right)} \matrix{0 \\ 1 \\ \left( p_1 - i p_2 \right) / \left( \mp \pt \c + E / \c \right) \\ -p_3 / \left( \mp \pt \c + E / \c \right)}
-\end{eqnarray*}
-\begin{eqnarray*}
-\dirspin {\antiparticle \pt} \q {1/2} & \eqdef & \sqrt{\frac 1 2 \left( 1 + \frac {\mp \pt \c^2} E \right)} \matrix{\left( p_1 - i p_2 \right) / \left( \mp \pt \c + E / \c \right) \\ -p_3 / \left( \mp \pt \c + E / \c \right) \\ 0 \\ 1} \\
-\dirspin {\antiparticle \pt} \q {-1/2} & \eqdef & \sqrt{\frac 1 2 \left( 1 + \frac {\mp \pt \c^2} E \right)} \matrix{ p_3 / \left( \mp \pt \c + E / \c \right) \\ \left( p_1 + i p_2 \right) / \left( \mp \pt \c + E / \c \right) \\ 1 \\ 0}
-\end{eqnarray*}
-In these expressions, we used the shorthand notations $\E \eqdef \Ek \pt \q$ and $\p \eqdef \h \q / \a$ for energy and momentum.
-For the special case of the wave vector $\q = \sv 0$, we take the values:
-$$
-\begin{array}{cccc}
-\dirspin \pt {\sv 0} {1/2} \eqdef \matrix{1 \\ 0 \\ 0 \\ 0} &
-\dirspin \pt {\sv 0} {-1/2} \eqdef \matrix{0 \\ 1 \\ 0 \\ 0} &
-\dirspin {\antiparticle \pt} {\sv 0} {1/2} \eqdef \matrix{0 \\ 0 \\ 0 \\ 1} &
-\dirspin {\antiparticle \pt} {\sv 0} {-1/2} \eqdef \matrix{0 \\ 0 \\ 1 \\ 0}
-\end{array}
-$$
-as a definition for $\mp \pt = 0$, too.
-We extend these definitions periodically to all $\q \in \ILD$ by $\dirspin \pt \q \sp \eqdef \dirspin \pt {\eqp \q} \sp$ and $\dirspin {\antiparticle \pt} \q \sp \eqdef \dirspin {\antiparticle \pt} {\eqp \q} \sp$.
-
-These spinors verify the orthogonality relations:
-\begin{eqnarray*}
-\ddirspin \pt \q {\sp'} \dirspin \pt \q \sp & = & \delta_{\sp',\sp} \\
-\ddirspin {\antiparticle \pt} \q {\sp'} \dirspin {\antiparticle \pt} \q \sp & = & \delta_{\sp',\sp}
-\end{eqnarray*}
-as well as the Dirac equations:
-\begin{eqnarray*}
-\gammat \mu \stvl p \mu \dirspin \pt \q \sp & = & \mp \pt \c\ \dirspin \pt \q \sp \\
-\gammat \mu \stvl p \mu \dirspin {\antiparticle \pt} \q \sp & = & - \mp \pt \c\ \dirspin {\antiparticle \pt} \q \sp
-\end{eqnarray*}
-where we use the condensed notation:
-\begin{equation*}
-\gammat \mu \stvl p \mu \eqdef \frac E \c \gammat 0 - p_1 \gammat 1 - p_2 \gammat 2 - p_3 \gammat 3
-\end{equation*}
-The annihilation and creation spinor operators of these particles and of their anti-particles, which act canonically as homomorphisms between $\H$ and $\H^4$, are defined by:
-\begin{eqnarray*}
-\SAop \pt \q \sp & \eqdef & \dirspin \pt \q \sp \Faop \pt \q \sp \aop \pt \q \sp \\
-\SCop \pt \q \sp & \eqdef & \ddirspin \pt \q \sp \gammat 0 \cop \pt \q \sp \Faop \pt \q \sp \\
-\SAop {\antiparticle \pt} \q \sp & \eqdef & \ddirspin {\antiparticle \pt} \q \sp \gammat 0 \Faop {\antiparticle \pt} \q \sp \aop {\antiparticle \pt} \q \sp \\
-\SCop {\antiparticle \pt} \q \sp & \eqdef & \dirspin {\antiparticle \pt} \q \sp \cop {\antiparticle \pt} \q \sp \Faop {\antiparticle \pt} \q \sp
-\end{eqnarray*}
-where the fermion antisymmetrization operators $\Faop \pt \q \sp$ are defined as in appendix \ref{Antisymmetrization operators}. These spinor operators can also be defined on the position basis by:
-\begin{eqnarray*}
-\SAop \pt \n \sp & \eqdef & ( 1+2\N )^{-3/2} \sum_{\q} \exp{\i 2 \pi \n \ssp \q} \SAop \pt \q \sp \\
-\SCop \pt \n \sp & \eqdef & ( 1+2\N )^{-3/2} \sum_{\q} \exp{-\i 2 \pi \n \ssp \q} \SCop \pt \q \sp \\
-\SAop {\antiparticle \pt} \n \sp & \eqdef & ( 1+2\N )^{-3/2} \sum_{\q} \exp{\i 2 \pi \n \ssp \q} \SAop {\antiparticle \pt} \q \sp \\
-\SCop {\antiparticle \pt} \n \sp & \eqdef & ( 1+2\N )^{-3/2} \sum_{\q} \exp{-\i 2 \pi \n \ssp \q} \SCop {\antiparticle \pt} \q \sp
-\end{eqnarray*}
-We extend these definitions periodically to all $\q \in \ILD$ by $\SAop \pt \q \sp \eqdef \SAop \pt {\eqp \q} \sp$, $\SCop \pt \q \sp \eqdef \SCop \pt {\eqp \q} \sp$, $\SAop {\antiparticle \pt} \q \sp \eqdef \SAop {\antiparticle \pt} {\eqp \q} \sp$ and $\SCop {\antiparticle \pt} \q \sp \eqdef \SCop {\antiparticle \pt} {\eqp \q} \sp$.
-
-\subsection*{Spinor products}
-
-In the development of the interaction Hamiltonian on the plane waves basis, the Dirac spinors always appear in the form of products. For instance (see section \ref{QED interaction Hamiltonian}), the elastic scattering terms of the Coulomb interaction, with or without spin flip, contain following products, where we use the shorthand notations $\gamma \eqdef \gk \pt \q$ and $\gamma' \eqdef \gk \pt {\q'}$ for the Lorentz factors:
-\begin{eqnarray*}
-\ddirspin \pt {\q'} {\pm 1/2} \dirspin \pt \q {\pm 1/2} & = & \frac 1 2 \sqrt{1 + \frac 1 {\gamma'}} \sqrt{1 + \frac 1 \gamma} \left( 1 + \frac{\q' \ssp \q \pm \i \svc{(\q' \scp \q)} 3}{\mpr \pt^2 (1 + \gamma') (1 + \gamma)} \right) \\
-\ddirspin \pt {\q'} {\minusplus 1/2} \dirspin \pt \q {\pm 1/2} & = & \frac{\i \svc{(\q' \scp \q)} 1 \minusplus \svc{(\q' \scp \q)} 2}{2 \mpr \pt^2 \sqrt{(1 + \gamma') (1 + \gamma) \gamma' \gamma}}
-\end{eqnarray*}
-These expressions are also valid for the corresponding antiparticles $\antiparticle \pt$.
-The particle pair creation and annihilation terms of the Coulomb interaction, with equal or opposite spins, contain following products:
-\begin{eqnarray*}
-\ddirspin \pt {\q'} {\pm 1/2} \dirspin {\antiparticle \pt} \q {\pm 1/2} & = & \frac 1 2 \sqrt{1 + \frac 1 {\gamma'}} \sqrt{1 + \frac 1 \gamma} \left( \frac{\svc{\q'} 1 \minusplus \i \svc{\q'} 2}{\mpr \pt (1 + \gamma')} + \frac{\svc\q 1 \minusplus \i \svc\q 2}{\mpr \pt (1 + \gamma)} \right) \\
-\ddirspin \pt {\q'} {\minusplus 1/2} \dirspin {\antiparticle \pt} \q {\pm 1/2} & = & \frac 1 2 \sqrt{1 + \frac 1 {\gamma'}} \sqrt{1 + \frac 1 \gamma} \left( \frac{\minusplus \svc{\q'} 3}{\mpr \pt (1 + \gamma')} + \frac{\minusplus \svc\q 3}{\mpr \pt (1 + \gamma)} \right)
-\end{eqnarray*}
-The calculation of transition probabilities involves the square of the absolute value of these products, given by:
-\begin{eqnarray*}
-\left| \ddirspin \pt {\q'} \sp \dirspin \pt \q \sp \right|^2 & = & \frac{(\q' \ssp \q)^2 + \svc{(\q' \scp \q)} 3 ^2}{4 \mpr \pt^4 (1 + \gamma') (1 + \gamma) \gamma' \gamma} + \frac 1 {4 \gamma' \gamma} \left( (1 + \gamma') (1 + \gamma) + \frac{2 \q' \ssp \q}{\mpr \pt^2} \right) \\
-\left| \ddirspin \pt {\q'} {-\sp} \dirspin \pt \q \sp \right|^2 & = & \frac{\svc{(\q' \scp \q)} 1 ^2 + \svc{(\q' \scp \q)} 2 ^2}{4 \mpr \pt^4 (1 + \gamma') (1 + \gamma) \gamma' \gamma}
-\end{eqnarray*}
-Their sum, involved when the spin of the scattered particles isn't being measured, takes the form:
-\begin{equation*}
-\sum_{\sp'} \left| \ddirspin \pt {\q'} {\sp'} \dirspin \pt \q \sp \right|^2 = \frac 1 4 \left( \sqrt{1 + \frac 1 {\gamma'}}\sqrt{1 + \frac 1 \gamma} + \sqrt{1 - \frac 1 {\gamma'}}\sqrt{1 - \frac 1 \gamma} \right)^2 - \beta' \beta \sin{\theta / 2}^2
-\end{equation*}
-where we used the shorthand notations $\beta \eqdef \bkn \pt \q$ and $\beta' \eqdef \bkn \pt {\q'}$ and where we introduced the scattering angle $\theta$ between $\q$ and $\q'$. In the case where this angle is undefined because one of $\q$ or $\q'$ is null, the last term can be dropped.
+\input{chapter-spinor-operators}
