--- a/part-examples.tex
+++ b/part-examples.tex
@@ -1,118 +1,8 @@
 \part{Examples}
 
-\chapter{Wave packets}
-\label{Wave packets}
+\input{chapter-wave-packets}
 
-\section{Gaussian wave packet}
-
-A well-known consequence of the quantum formalism is the impossibility to describe a particle, like in classical mechanics, as a mass point having at each instant a well-defined position and velocity. In the quantum mechanics of a single particle in continuous space-time, the movement of the wave packet defining its statistical position can still be described, like in classical fluid mechanics, by a probability current density (which is related to the phase gradient of the wave packet), but as soon as several particles are present or are even being created and annihilated like in Quantum Field Theory, the analogy to classical fluid mechanics becomes much more elusive. It is still possible, however, to describe approximate particle trajectories in the frame of Quantum Field Theory if one considers that proper quantum effects may remain beyond the reach of experimental precision in some situations. Gaussian wave packets are a typical model of such particles with a quasi-classical behavior, i.e. with a position and a velocity being well-defined to a good approximation.
-
-A Gaussian wave packet of a particle of type $\pt$ and in the spin state $\sp$, with a mean momentum $\q_0 \in (\IZ/(1+2\N))^3$, a mean position $\n_0 \in \IR^3$ and a width $w_0 \in \IR_+^*$, is given by:
-\begin{eqnarray*}
-\ket \Psi & = & \dop{G^\pt_\sp}(\q_0,\n_0,w_0) \ket \vac \\
-\dop{G^\pt_\sp}(\q_0,\n_0,w_0) & \eqdef & C(\q_0,w_0) (2w_0)^{3/2} (1+2\N)^{-3/2} \\
-&& \sum_{\q} \exp{-2 \pi w_0^2 \q^2 - \i 2 \pi \q \ssp \n_0} \cop\pt{\q_0+\q}\sp
-\end{eqnarray*}
-with the normalization factor:
-\begin{equation*}
-C(\q_0,w_0) \eqdef \left[ (2w_0)^3 (1+2\N)^{-3} \sum_{\q} \exp{-4 \pi w_0^2 \q^2} \right]^{-1/2}
-\end{equation*}
-In the usual case where $1 \ll w_0 \ll \N$, this normalization factor approximates to 1. On the position basis, the creation operator of the Gaussian wave packet can be expressed as:
-\begin{eqnarray*}
-\dop{G^\pt_\sp}(\q_0,\n_0,w_0) & = & C(\q_0,w_0) w_0^{-3/2} \sum_{\n} A(\n - \n_0'(\n),w_0) \\
-&& \exp{-\pi (\n - \n_0'(\n))^2/2 w_0^2 + \i 2 \pi \q_0 \ssp \n} \cop\pt\n\sp
-\end{eqnarray*}
-with the numerical factor:
-\begin{equation*}
-A(\n - \n_0'(\n),w_0) \eqdef (2w_0^2)^{3/2} (1+2\N)^{-3} \sum_{\q} \exp{-2 \pi w_0^2 \left( \q - \i (\n - \n_0'(\n))/2 w_0^2 \right)^2}
-\end{equation*}
-where $\n_0'(\n)$ can be chosen arbitrarily in $\n_0 + ((1+2\N) \IZ)^3$. In the usual case where $1 \ll w_0 \ll \N$, this factor approximates to 1 if $\n_0'(\n)$ can be chosen such as $\| \n-\n_0'(\n) \| \ll \N$. To the zeroth order, the Hamiltonian evolution of the Gaussian wave packet $\ket{\Psi_0} = \dop{G^\pt_\sp}(\q_0,\n_0,w_0) \ket \vac$ is given by:
-\begin{eqnarray*}
-\ket{\Psi_t} & = & C(\q_0,w_0) (2w_0)^{3/2} (1+2\N)^{-3/2} \\
-&& \sum_{\q} \exp{-2 \pi w_0^2 \q^2 - \i 2 \pi \q \ssp \n_0 -\i 2 \pi \Ek \pt {\q_0+\q} (t - t_0) / \h} \cop\pt{\q_0+\q}\sp \ket \vac
-\end{eqnarray*}
-If $w_0 \gg q_0^{-1}$, the saddle-point approximation $\Ek \pt {\q_0+\q} \approx \Ek \pt {\q_0} + \q \ssp \nabla_{\q} \Ek \pt {\q_0}$ can be used and it follows:
-\begin{eqnarray*}
-\ket{\Psi_t} & \approx & \exp{-\i 2 \pi \Ek \pt {\q_0} (t - t_0) / \h} \dop{G^\pt_\sp}(\q_0,\n_t,w_0) \ket \vac \\
-\n_t & \eqdef & \n_0 + \vk \pt {\q_0} (t - t_0) / \a
-\end{eqnarray*}
-The mean position $\n_t$ of the particle follows therefore, in the toroidal space $(\IR / (1+2\N)\IZ)^3$,  a classical trajectory at the constant velocity $\vk \pt {\q_0}$ which would be attributed classically to a point mass of mass $\mp \pt$ and of momentum $\h \eqp{\q_0} / \a$.
-
-\chapter{Coulomb scattering}
-\label{Coulomb scattering}
-
-\section{Leading order calculation}
-
-We consider in this section the scattering of an electron by an atomic nucleus of atomic number $Z$. We model the nucleus by a classical point charge without magnetic moment, being at rest at the origin in the lattice reference frame and having a mass much higher than the mass of the electron. The corresponding electromagnetic field is described as a classical Coulomb potential $\V^{cl}$ given in terms of Fourier components by:
-\begin{eqnarray*}
-\V^{cl}_{\n} & \eqdef & ( 1 + 2 \N )^{-3} \sum_{\q_\photon \neq \sv 0} \FT \V^{cl}_{\q_\photon} \exp{\i 2 \pi \n \ssp \q_\photon} \\
-\FT \V^{cl}_{\q_\photon} & \eqdef & \frac{Z \e}{4 \pi^2 \vpty \a q_\photon^2}
-\end{eqnarray*}
-The corresponding semi-classical interaction Hamiltonian takes the form:
-\begin{eqnarray*}
-\Hop' & \eqdef & \HopQED + \Hop^{cl} \\
-\Hop^{cl} & \eqdef & \sum_{\n} \Qop \n \V^{cl}_{\n}
-\end{eqnarray*}
-and its development on the plane wave basis is given by:
-\begin{eqnarray*}
-\Hop^{cl} & = & \frac{Z \e^2}{4 \pi^2 \vpty \a} ( 1 + 2 \N )^{-3} \sum_{\pt, \q, \sp', \sp} \Qp \pt \sum_{\q_\photon \neq \sv 0} q_\photon^{-2} \\
-&& \left( \SCop \pt {\q + \q_\photon} {\sp'} + \SAop {\antiparticle \pt} {-\q - \q_\photon} {\sp'} \right) \gammat 0 \left( \SAop \pt \q \sp + \SCop {\antiparticle \pt} {-\q} \sp \right)
-\end{eqnarray*}
-
-As initial and final states, we take:
-\begin{eqnarray*}
-\ket{\Psi_i} & \eqdef & \ketX 1 \electron {\q_i} {\sp_i} \\
-\ket{\Psi_f} & \eqdef & \ketX 1 \electron {\q_f} {\sp_f}
-\end{eqnarray*}
-The matrix element of the interaction Hamiltonian is given for $\q_f \neq \q_i$ by:
-\begin{equation*}
-H'_{f,i} = (1 + 2 \N )^{-3} \frac {-Z \e^2}{4 \pi^2 \vpty \a \norm{\q_f - \q_i}^2} \ddirspin \electron {\q_f} {\sp_f} \dirspin \electron {\q_i} {\sp_i}
-\end{equation*}
-and the leading order transition probability for this process is also represented by following diagram:
-\begin{center}
-\includegraphics[scale=0.2]{images/diagrams/Coulomb_Scattering.pdf}
-\end{center}
-We consider a detector capturing the electrons having their momentum in the solid angle $\delta \Omega$. For $i \notin \delta \F$, the leading order transition probability takes the form:
-\begin{eqnarray*}
-\TPn i {\delta \F} 2 & \approx & \int_{\delta \Omega} \int_0^{\infty} ( 2 \pi )^2 \frac{t - t_0} \h \left| H'_{f + \delta \q,i} \right|^2 \deltaE2{E_{f + \delta \q} - E_i} \\
-&& \left( (1 + 2 \N) \frac \a \h \right)^3 p^2 \dnp \dO
-\end{eqnarray*}
-By taking following continuation for the factors of the integrand:
-\begin{eqnarray*}
-\left| H'_{f + \delta \q,i} \right|^2 & \approx & \left( (1+2\N) \a \right)^{-6} \frac {Z^2 \e^4 \h^4}{16 \pi^4 \vpty^2 \norm{\p - \p_i}^4} \left| \ddirspin \electron \q {\sp_f} \dirspin \electron {\q_i} {\sp_i} \right|^2 \\
-\deltaE2{E_{f + \delta \q} - E_i} & \approx & \deltaE2{\sqrt{(\mp \electron \c^2)^2 + (p \c)^2} - E_i}
-\end{eqnarray*}
-the integration over $p$ yields to:
-\begin{equation*}
-\TPn i {\delta \F} 2 \approx (t - t_0) j_i \CSn i {\delta \F} 2
-\end{equation*}
-where $\sv j_i$ is the incident particle flux, given by:
-\begin{eqnarray*}
-\sv j_i & \eqdef & \left( (1+2\N) \a \right)^{-3} \sv v_i \\
-\sv v_i & \eqdef & \frac {\p_i} {E_i / \c^2}
-\end{eqnarray*}
-and $\CSn i {\delta \F} 2$ the leading order cross section, given for $i \notin \delta \F$ by:
-\begin{equation*}
-\CSn i {\delta \F} 2 \approx \int_{\delta \Omega} \left( \frac {Z \e^2} {8 \pi \vpty v_i p_i} \right)^2 \left| \ddirspin \electron \q {\sp_f} \dirspin \electron {\q_i} {\sp_i} \right|^2 \frac {\dO} {\sin{\theta / 2}^4}
-\end{equation*}
-where $\theta$ is the deviation angle of the electron.
-
-If the incident electron beam isn't polarized and if the polarization of the scattered electron isn't being measured, the cross section is obtained by adding the cross sections corresponding to the final spin states $\sp_f$ and averaging over the cross sections corresponding to the initial spin states $\sp_i$:
-\begin{equation*}
-\left< \CSn i {\delta \F} 2 \right> \approx \int_{\delta \Omega} \left( \frac {Z \e^2} {8 \pi \vpty v_i p_i} \right)^2 \frac 1 2 \sum_{\sp_f,\sp_i} \left| \ddirspin \electron \q {\sp_f} \dirspin \electron {\q_i} {\sp_i} \right|^2 \frac {\dO} {\sin{\theta / 2}^4}
-\end{equation*}
-The spin summation is given for $E = E_i$ by:
-\begin{equation*}
-\frac 1 2 \sum_{\sp_f,\sp_i} \left| \ddirspin \electron \q {\sp_f} \dirspin \electron {\q_i} {\sp_i} \right|^2 = 1 - \beta_i^2 \sin{\theta / 2}^2
-\end{equation*}
-and the mean cross section takes also the form:
-\begin{equation*}
-\left< \CSn i {\delta \F} 2 \right> \approx \int_{\delta \Omega} \left( \frac {Z \e^2} {8 \pi \vpty v_i p_i} \right)^2 \left( 1 - \beta_i^2 \sin{\theta / 2}^2 \right) \frac {\dO} {\sin{\theta / 2}^4}
-\end{equation*}
-The total mean cross section for deviation angles $\theta \geq \theta_m$ is also given by:
-\begin{equation*}
-\left< \CSn i \F 2 \right> \approx \left( \frac {Z \e^2} {8 \pi \vpty v_i p_i} \right)^2 \left( \frac {4 \pi} {\tan{\theta_m / 2}^2} + 8 \pi \beta_i^2 \ln{\sin{\theta_m / 2}} \right)
-\end{equation*}
+\input{chapter-coulomb-scattering}
 
 %TODO: Examples: Muonium
 %\chapter{Muonium}
