--- a/part-interpretation.tex
+++ b/part-interpretation.tex
@@ -1,53 +1,8 @@
 \part{Interpretation}
 
-\chapter{Metaphysics}
-\label{Metaphysics}
+\input{chapter-metaphysics}
 
-\renewcommand{\epigraphwidth}{6cm}
-\epigraph{As I have said so many times,\\God doesn't play dice with the world.}{Albert Einstein, \\ in \textit{Einstein and the Poet}~\cite{Hermanns1983}}
-
-\section{Spinoza's philosophy}
-
-Since the interpretation of Quantum Field Theory I am about to give has been inspired by Spinoza's classical work \textit{The Ethics}~\cite{Spinoza1677}, I shall make here a short presentation of its basic ideas. According to the causalist world view of classical mechanics, each individual existent thing -- an object, a thought -- has necessarily a cause which explains its existence at a given moment. These things are considered to be alterations, or ``modes'', of some fundamental ``substance'' constitutive of Nature as a whole. Since this substance has some of the fundamental properties attributed to God by Judaic theology -- self-caused, free, eternal, infinite (i.e. containing everything) --, it has been identified by Spinoza to God itself, confounding thus the concept of `God' with what philosophers traditionally call `Nature'. The human intellect conceives the substance, as well as every individual existent thing, under the two aspects, or ``attributes'', of an extended (material) and of a thinking (mental) thing. This categorization, however, is nothing but a property of the human intellect and not an intrinsic property of the things themselves. Considered under its material aspect, a human being, for instance, consists in a body extending in the substance, i.e. in God, whereas it consists in a mind thinking in God when considered under its mental aspect. Nevertheless, both are one and the same thing, so that the laws of Physics -- considered to be part of the nature of God -- could determine the laws of Psychology. The knowledge of God, which also encompasses the knowledge of the world in general and of Man in particular, is therefore considered to be the mind's highest good.
-
-\section{Quantum metaphysics}
-
-Interestingly, Spinoza's metaphysical concepts can be identified quite straightforwardly with the fundamental notions of Quantum Field Theory, thus providing them with a naturalistic basis. On the other hand, Quantum Field Theory, generally considered to be counter-intuitive, paradoxical and hardly understandable, becomes grounded in a very classical philosophical tradition and should thus become accessible to a broader range of Science philosophers.
-
-The states (modes) of God (the substance) are evidently identified, under their material aspect, with the quantum states $\ket \Psi$ of the universe (the elements of the Hilbert space $\H$), and, under their mental aspect, with the collective mind states $\cms$ (the elements of $\CMS$). The relation between the material and the mental aspects is given by the decomposition $\H = \bigoplus_{\cms}^\perp \H_\cms$ of the Hilbert space, or equivalently by the orthogonal projection operators $\op{\Pi}_\cms$, relating each mental state $\cms$ with the set of all corresponding quantum states $\H_\cms$. Furthermore, the nature of God encompasses the laws of Physics, given by the Hamilton operator $\Hop$, or more precisely by the elementary evolution operator $\op U_\tau \eqdef \exp{- \i 2 \pi \Hop \tau / \h}$. God can finally be defined as a mathematical structure $\God$ given by:
-\begin{equation*}
-\God \eqdef \left( \H \times \CMS, (\op{\Pi}_\cms), \op U_\tau \right)
-\end{equation*}
-The states of God, taking the general form $(\ket \Psi, \cms)$, are said to be ``real'' if $\ket \Psi \in \H_\cms$ and ``virtual'' otherwise. An elementary evolution step of the state of God proceeds from a real state $(\ket{\Psi_0}, \cms_0)$, first evolving to a generally virtual state $(\op U_\tau \ket{\Psi_0}, \cms_0)$ and eventually collapsing to one of the real states $(\op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0}, \cms_1)$ with a probability $\bra{\Psi_0} \dop U_\tau \op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0} / \braket{\Psi_0}{\Psi_0}$.
-
-\chapter{Interpretation}
-\label{Interpretation}
-
-\section{The role of consciousness}
-
-As it results from the preceding description of the processes taking place in the evolution of the state of God, not only the purely material processes described by the Hamiltonian evolution operator $\op U_\tau$, but also the mental processes described by the collapse operators $(\op{\Pi}_\cms)$ play a central role in the evolution of the quantum state $\ket \Psi$ of the universe. In the following, we will call `consciousness state' any collective mind state $\cms$ and `consciousness' the phenomenon of experiencing it. This phenomenon must be very carefully distinguished from the purely material processes of conscious thinking happening at the neural level within brains, although both are closely related to each other.
-
-Quantum phenomena, like the superposition of an atom in an excited and a decayed state, or the superposition of a photodetector in an activated and an unactivated state -- as in the quantum measurement example given in section \ref{Quantum measurement} --, have always proved to be very puzzling to us, because they show that quantum processes don't fit within our mental categories, in which a photodetector must be either activated or not, for instance. This is not a result of a limitation of our intelligence that we could overcome by learning to think in a new way corresponding more adequately to the physical reality. No, at a very fundamental level, there isn't and there will never be any individual mind state $\ims$ corresponding to the superposition of a brain having ``seen'' a photodetector both activated and not, although this superposition does exist at the material level. This inadequacy between our mental categories and the material reality is a matter of fact having profound consequences for the process of consciousness. The contents of a consciousness state $\cms$ cannot simply be a representation of the material reality (even a partial one), because material reality explores possibilities going far beyond the realm of what we can grasp with our mental categories. An arbitrary consciousness state $\cms$ can only ``match'' more or less good the current quantum state $\ket \Psi$ of the universe, the number $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$, lying between 0 and 1, measuring how good the fit is. If it equals 1, the fit is perfect (although $\cms$ remains a partial representation of the quantum state $\ket \Psi$) and $\cms$ is being experienced with certainty. If it equals 0, there is no fit and $\cms$ cannot be experienced. If it lies inbetween, any other consciousness state $\cms$ could be experienced too, the numbers $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$ defining the probability law according to which the actually experienced consciousness state will be selected. So the quantum state $\ket \Psi$ of the universe determines the contents of the experienced consciousness state $\cms$, according to a probability law reflecting how good the mental categories in $\cms$ fit the material reality $\ket \Psi$. On the other hand, and this is probably even more astonishing, the experience of the consciousness state $\cms$ will reduce the quantum state $\ket \Psi$ of the universe to its component $\op{\Pi}_\cms \ket \Psi$ corresponding to the mental categories in $\cms$. So we can say that consciousness actively shapes the material reality according to its own mental categories -- or more poetically, that you are putting human order into the world with every glance you take at it!
-
-In the quantum measurement example given in section \ref{Quantum measurement}, for instance, the quantum superposition of two states of the brain of the observer, having either observed the photodetector activated or not, resolves to one of the components corresponding to the mental categories `I have seen the photodetector activated' and `I haven't seen it activated yet'. Because the quantum state of the rest of the universe (here specifically the photodetector and the decaying atom) is correlated to the quantum state of the brain via sensory perception, this reduction of the quantum state of the universe to a given mental category will have consequences for the rest of the universe, too. For instance, if the observer makes the conscious experience of seeing the photodetector activated, the state of the photodetector will also reduce to the activated state only, because the unactivated state is only correlated to the component of the state of the brain corresponding to the mental category `I haven't seen the photodetector activated yet', which is being dropped. So the mental categories, which only concern the quantum state of the brain originally, get transposed to external objects via the correlation induced by sensory perception between them and the brain in the quantum state $\ket \Psi$ of the universe. Similarly, the state of the decaying atom will also reduce to the decayed state because the non-decayed state is only correlated to the component of the state of the brain corresponding to the mental category `I haven't seen the photodetector activated yet', which is being dropped.
-
-If the observer had made instead another kind of measurement on the decaying atom, e.g. measuring its position (which we suppose here to be uncorrelated with its decay), the quantum state of the atom would have been reduced accordingly, so that it would only be present in the region of space where it has been observed, whereas the decayed and non-decayed states would still remain in a quantum superposition, since they are not correlated with the consciousness state of the observer. So the way our mental categories get transposed to external objects strongly depends on the way we are observing them, i.e. on the way we are letting them get correlated to the quantum state of our brains.
-
-\section{Epistemological considerations}
-
-From a historical perspective, it should become quite clear today why the founders of Quantum Physics have had such difficulties to agree on an interpretation of this new branch of Physics. Starting with a few subatomic experiments, like the measurement of the emission spectrum of hydrogen atoms, they ended up with a theory bringing along a twofold scientific revolution and profoundly revising our world view.
-
-The first revolution, which is nowadays widely accepted, concerns the fact that material reality cannot be described within our usual mental categories. The most classical example is the so-called wave-particle duality, which implies that elementary particles, and as a consequence also atoms and molecules for instance, can occupy several positions in space at a time and that their motion follow wave equations and interference patterns typical for wave phenomena. And ultimately, not only invisible particles, but also configurations of the whole universe can combine with each other via wave amplitudes and interfere in their evolution in a similar way as waves would do. This has been a big paradigm change compared to the ideal of Classical Physics, where intelligibility, i.e. the adequation to our mental categories, was considered an essential characteristic of any scientific theory. The position of Louis de Broglie, for instance, is typical for the efforts to resist this paradigm change. After having proposed himself the relation $\lambda = \h / p$ between the momentum $p$ of a particle and the wavelength $\lambda$ of the corresponding wave phenomena, he developed the Pilot-Wave Theory, an alternative interpretation of Quantum Mechanics (that we know today to be false) according to which both the particle and the corresponding wave have their own existence and can be described as in Classical Physics, i.e. according to our mental categories -- the particle having a definite trajectory and being ``guided'' by the accompanying wave.
-
-The second scientific revolution, which is far from being over yet, concerns the fact that consciousness actively modifies the quantum state of the universe, according to its own mental categories and in its own way, which cannot be reduced to other, purely material phenomena: Technically, the collapse of a quantum state from $\ket \Psi$ to $\op{\Pi}_\cms \ket \Psi$ obviously cannot be reduced to a Hamiltonian evolution of the form $\op U_\tau \ket \Psi$. This is of course a radical paradigm change compared to the Cartesianism of the Copenhagen interpretation, according to which the consciousness of the ``observer'' passively takes notice of some aspects of the material world, e.g. the (supposedly well-defined) state of a measurement apparatus. A typical opponent to this paradigm change is Albert Einstein, who saw with very critical eyes the ``spooky action at a distance'' implied by the collapse of the quantum state of the universe, i.e. the instantaneous modification of the quantum state of a distant object happening when the consciousness state of a previously correlated brain is being selected. The famous Einstein-Podolsky-Rosen thought experiment, which has been conceived to illustrate these non-local features of collapse (i.e. its incompatibility to one of the central principles of Special Relativity), was thought to invalidate definitely the hypothesis of collapse, because it was conceived under the assumptions that all physical phenomena should obey the same laws, described in Quantum Theory by the Hamiltonian evolution operator $\op U_\tau$, and that collapse should ultimately be described in that way instead of using the ad-hoc assumption of the intervention of a projection operator $\op{\Pi}_\cms$. However, as this experiment has been realized for instance by the team of Alain Aspect~\cite{Aspect1982} in experimental conditions becoming more and more sophisticated, the non-locality of quantum measurement has always been demonstrated very clearly, so that it makes no doubt today that collapse does obey other physical laws than Hamiltonian evolution alone.
-
-The first milestone of this second scientific revolution has been set by John von Neumann with the idea that ``mind causes collapse''~\cite{Neumann1932}. This idea addresses a leak in the Copenhagen interpretation, where we distinguish between a ``macroscopic world'', supposed to be ruled by the laws of Classical Physics, and a ``microscopic world'', ruled by the laws of Quantum Physics. The interface between both worlds is build by measurement apparatuses, which are supposed to cause the collapse of the quantum state of the microscopic world when they interact with it. This interpretation relies on the assumption that no quantum phenomenon can be observed without the help of a measurement apparatus, which is obviously false. For instance, you can observe with your naked eyes the diffraction patterns of light passing in the dark through the fine structures of woven fabric, and that is a genuine quantum phenomenon. One could maybe ``save'' the Copenhagen interpretation by considering that the eye constitute the measurement apparatus in that case, but where do an eye actually begin: With the cornea, the pupil, the retina, the retinal ganglion cells? Or even inside the brain, after the neural processing of visual perceptions? Defining the frontier between the microscopic and the macroscopic world seems to be a rather arbitrary operation and it is therefore not really intellectually satisfying. The only thing we are sure of is that, ultimately, our consciousness ``resolves'' quantum superpositions according to our mental categories. This idea that, ultimately, consciousness causes collapse was once known as the `standard interpretation' of Quantum Mechanics. It has been almost forgotten since, perhaps because it had been originally formulated all to vaguely to be taken seriously. In this book, I am formulating it again using a very precise and well-defined formalism, so that one can unambiguously derive its implications on a very solid basis. I hope that this contribution will help reconsidering the profound implications of this second scientific revolution and widening its acceptance in the scientific community.
-
-\section{The Spinozist approach to Quantum Physics}
-
-The Spinozist aspects of our interpretation of Quantum Field Theory concern this second scientific revolution, i.e. the role of consciousness in physical processes. Historically, Spinoza's philosophy developed on top of Cartesianism, which considers the material world to be a mechanical, deterministic one and consciousness to be a passive, external observer of the happenings in the material world; although this material world is supposed to obey the very strict laws of Classical Mechanics, the mental world is supposed to be absolutely free, independent of the material one and obeying no specific laws. Spinoza conserved this mechanical view of the material world, but tried to ground the mental world upon the material one, considering that consciousness cannot exist independently of a material body, that it reflects the state of its material substrate and therefore obeys the same laws, which can be transposed, in principle, to the mental world. Thus, consciousness becomes again part of Nature; it isn't considered any more to exist in an ideal realm exterior to the contingencies of the material world.
-
-Our interpretation of Quantum Field Theory relates to the Copenhagen interpretation in a similar way as Spinozism relates to Cartesianism. In the Copenhagen interpretation, the microscopic world only -- and only the limited system under consideration -- is supposed to obey the laws of Quantum Physics, i.e. the Hamiltonian evolution and the collapse as the system interacts with a measurement apparatus. On the contrary, the macroscopic world, including the observer, is supposed to exist in an ideal realm where only the (Cartesian) laws of Classical Physics apply. In a genuine Spinozist approach, our interpretation grounds this ideal realm upon the material realm of the quantum world: The arbitrary distinction between a microscopic and a macroscopic world vanishes, whereas collapse is supposed not to happen in an interaction with a measurement apparatus -- a mere artifact -- but with brains -- the material substrate of a fundamental aspect of Nature, consciousness. Mind becomes thus again part of Nature, and comes along with its own properties and physical laws, completing the Hamiltonian evolution laws of purely material processes. Of course, the relation between mind and body is much more complex than in classical Spinozism, but I think that the basic approach of the problem of consciousness is essentially the same, so that we can say, in that sense, that we are developing here a Spinozist interpretation of Quantum Physics.
+\input{chapter-interpretation}
 
 %TODO Physical issues
 %\chapter{Physical issues}
@@ -64,72 +19,4 @@ Our interpretation of Quantum Field Theory relates to the Copenhagen interpretat
 %TODO Physical issues: Decoherence
 %\section{Decoherence}
 
-\chapter{Philosophical issues}
-\label{Philosophical issues}
-
-\section{The explanatory gap}
-
-As it has been observed by science philosophers in the last century, the gap between our understanding level of physical-material and of mental phenomena has been continuously growing as the scientific community successfully focused on the development of the Relativity and Quantum theories. It is therefore quite understandable on a science psychological level that some cognitive neuroscientists may have been hoping to be able to explain one day all mental phenomena in terms of biophysical processes. However, even if we could describe one day the correspondence between mental states and quantum states of the brain, the question of knowing ``why'' some specific aspects of the material world correspond to certain mental experiences, and why some other aspects do not, would still remain open. This question is known as the ``explanatory gap'' and isn't to be answered by a theory focusing uniquely on the material world. The theory developed in this book addresses this issue in a threefold way. First, it gives a well-defined status to mental states, considered to be an aspect of reality on their own that isn't merely derived from the material one. This is expressed in the theory by the form  $\H \times \CMS$ of the set of the possible states of God. Second, it defines the form of the correspondence between material and mental states, which is given by the family of the supplementary subspaces $\H_\cms$ corresponding to each possible mental state $\cms$. This stresses the idea that individual mental experiences are not necessarily only related to material aspects of a single, individual brain, but that the collective mental experience globally relates to the quantum state of the world as a whole. Finally, the description of the random collapse process from a virtual into a real state of God gives a first explanation of what is happening at a material and at a mental level as a mental state is getting experienced.
-
-\section{Skepticism}
-
-According to philosophical skepticism, in the form of Descartes' \textit{Cogito Ergo Sum} argument in his \textit{Discourse on the Method}~\cite{Descartes1637} for instance, the one and only aspect of the world which we know beyond any doubt to be real is the experience of our present individual mind state, the `Cogito'. Nothing can guarantee us that the representations of the world carried by this mind state -- like our past experiences, the feeling of the permanence of our existence, the image of our body, of the outer world, of our relations to others -- have or have had any physical reality. In particular, it cannot be taken for granted that experimental evidence can be accumulated over the ages: Experimental science \textit{must} rely on the mere belief that the mental representations of what we consider to be accumulated experimental evidence are related to physical processes that really did happen in the past. Indeed, in physical terms, stating that I am experiencing some individual mind state $\ims_s$ only implies that the collective mind state $\cms = \bFM N \ims$ is such that $\bM N {\ims_s} \geq 1$ and that the quantum state $\ket \Psi$ of the universe belongs to $\H_{\ims_s}^+$. It doesn't necessarily imply that the past evolution of $\ket \Psi$ corresponds to the mental representation of past experiences in the mind state $\ims_s$. The physical theory presented in this book belongs therefore to the long tradition of philosophical skepticism insofar as it doubts the very possibility of experimental science.
-
-%TODO: Philosophical issues: Personal identity
-%\section{Personal identity}
-
-%TODO: Philosophical issues: Free will
-%\section{Free will}
-
-%TODO: Philosophical issues: Qualia
-%\section{Qualia}
-
-\section{Materialism}
-
-Materialism is the doctrine according to which the subjective experience of consciousness can be completely reduced to the corresponding physical-material processes happening within our brains and thus can be explained without involving any other level of reality than the purely material one. It is generally considered among philosophers as the daydream of a physicist absorbed by his study object and becoming blind for the reality of his own subjective experience. Nevertheless, it still has numerous supporters in today's scientific community. In the frame of the theory developed in this book, it could be formulated as the hypothesis that no individual mind state is possible, since this would be equivalent to denying the existence of the mental world, which is of another nature as the material one. Mathematically, this hypothesis can be expressed simply as $\H_{\cms_\vac} = \H$, so that no individual mind state is being experienced in any quantum state. Equivalently, this could be expressed in terms of collapse operators by $\op{\Pi}_{\cms_\vac} = \Id$, so that there is no collapse of the quantum state of the universe. Its evolution reduces therefore to its Hamiltonian part,
-\begin{eqnarray*}
-\ket{\Psi(t)} & = & \exp{- \i 2 \pi \frac{t - t_0} \h \Hop} \ket{\Psi(t_0)}
-\end{eqnarray*}
-and the stochastic process of collective mind selection do not apply.
-
-Materialism in this context is facing the problem that it cannot satisfactorily explain how it is supposed to ``feel like'' in quantum states where brains happen to be in a quantum superposition of states corresponding to different states of consciousness. This would be the case for instance in a state of the form:
-\begin{equation*}
-\left(\sqrt{0.9}\ \dop{\Psi_\ims^\alpha} + \sqrt{0.1}\ \dop{\Psi_{\ims'}^{\alpha'}}\right) \H_{\cms_\vac}
-\end{equation*}
-where the brain states corresponding to the mental states $\bM 1 \ims$ and $\bM 1 {\ims'}$ are both present in a quantum superposition with the statistical weights 90\% and 10\%, respectively. There are two well-known ways of trying to escape this issue. In the no collapse theory of Everett, each consciousness state in the quantum superposition of a brain is supposed to be equally real as the others and to be experienced on its own. More precisely, these consciousness states are supposed to be statistically ``weighted'' in some (mysterious) way (since there isn't any random process taking place) by the square norm of the corresponding component of the quantum state of the universe, so that we are supposed to be more likely to experience one of them if it corresponds to a component with a greater square norm.
-
-The second way of escaping the difficulties of materialism is to deny that there are ``noticeable'' quantum superpositions of consciousness states of the brain. This is basically the aim of all spontaneous collapse theories, which have been reviewed exhaustively by Angelo Bassi and GianCarlo Ghirardi in their report \textit{Dynamical Reduction Models}~\cite{Bassi2003}. Generally, the quantum state of the universe is supposed to collapse in such a way that the center of mass of macroscopic objects is practically always localized in a small region of space, so that we cannot notice its quantum fluctuations with our naked senses. As a consequence, insofar as our consciousness state is being mostly driven by sensory experience only, the states of consciousness corresponding to the components of a quantum superposition of brains are most likely to differ very little from another, so that it shouldn't really mind if we don't know exactly which one is being experienced.
-
-\section{Solipsism}
-
-The solipsist is convinced that she is (and must be) the only person in the universe who has a subjective mental experience. Solipsism makes thus unproblematic the fact that we are experiencing the mental world in the form of a single individual mind instead of experiencing the whole collective mind state directly. In the frame of the theory developed in this book, solipsism can be expressed as the hypothesis that the only possible collective mind states (apart from $\cms_\vac$) are of the form $\bM 1 \ims$, or in physical terms, that:
-\begin{equation*}
-\H = \H_{\cms_\vac} \operp \bigoplus_{\ims}^\perp \H_{\bM 1 \ims}
-\end{equation*}
-Of course, this hypothesis is logically perfectly correct, but it is utmost difficult to make it compatible with the idea that mind states are being realized physically by the presence of corresponding quantum states of brains. Even if one supposes that the solipsist's brain has something special that makes it differ from other brains that aren't being experienced as individual mind states, one faces the problem that a quantum state in which many ``copies'' of the solipsist's brain, corresponding to different individual mind states, would be present couldn't be related in a satisfactory way to a single individual mind state: It is unclear, for instance, if quantum states in a subspace of the form $\dop{\Psi_{\ims'}^{\alpha'}} \dop{\Psi_\ims^\alpha} \H_{\cms_\vac}$ should be experienced as the mental state $\bM 1 \ims$ or $\bM 1 {\ims'}$.
-
-%TODO: Philosophical issues: Soul
-%\section{Soul}
-
-%TODO: Philosophical issues: God
-%\section{God}
-
-%TODO: Philosophical issues: Mental birth
-%\section{Mental birth}
-%Und was gab das den Frauen für eine wehmütige Schönheit, wenn sie schwanger waren und standen, und in ihrem großen Leib, auf welchem die schmalen Hände unwillkürlich liegen blieben, waren zwei Früchte: ein Kind und ein Tod. Kam das dichte, beinah nahrhafte Lächeln in ihrem ganz ausgeräumten Gesicht nicht davon her, daß sie manchmal meinten, es wüchsen beide?
-%Rainer Maria Rilke: Die Aufzeichnungen des Malte Laurids Brigge
-
-%TODO: Philosophical issues: Thought experiments
-%\chapter{Thought experiments}
-
-%TODO: Philosophical issues: Double-slit experiment
-%\section{Double-slit experiment}
-
-%TODO: Philosophical issues: Schrödinger's cat
-%\section{Schrödinger's cat}
-
-%TODO: Philosophical issues: Wigner's friend
-%\section{Wigner's friend}
-
-%TODO: Philosophical issues: EPR paradox
-%\section{EPR paradox}
+\input{chapter-philosophical-issues}
