--- a/part-material-world.tex
+++ b/part-material-world.tex
@@ -1,427 +1,5 @@
 \part{Material world}
 
-\chapter{Quantum fields}
-\label{Quantum fields}
+\input{chapter-quantum-fields}
 
-\renewcommand{\epigraphwidth}{7cm}
-\epigraph{The first simplification to be considered involves the very existence of the theory.}{John Collins,\\\textit{Renormalization}~\cite{Collins1984}}
-
-The aim of this chapter is to develop a well-defined, divergence-free mathematical formalism for the Standard Model of particle physics. To achieve this, we suppose that elementary particles are bounded to a finite lattice, also a finite set of world lines in the flat space-time (so that the particle field only has a finite number of modes), and that there is a maximum occupation number for any single mode of the field, for bosons as well as for fermions. This makes the Hilbert space of the states of the universe finite dimensional, so that the theory is trivially well-defined. We will develop here a general formalism, valid for any set of elementary particles and for any form of the interaction Hamiltonian, and define the notations used in the rest of this book.
-
-\section{Space}
-
-\paragraphtitle{Definition} Space is a finite set of points of the form $\FL$, where the physical constant $\N$ is a positive integer.
-
-\paragraphtitle{Remarks} This constant is supposed to be a ``huge'' integer ($\gtrsim~10^{46}$) which hasn't been measured experimentally yet. The finiteness of space is one of the conditions of the finite dimensionality of the Hilbert space of the quantum states, which will be defined in section \ref{Many particles states}. This is in turn a necessary condition of the well-definedness of the evolution equation \ref{Schrödinger equation} for an arbitrary Hamiltonian operator. It is therefore a theoretical necessity, which I shall assume although this fact hasn't been proved experimentally yet.
-
-\paragraphtitle{Commentaries} No notion of distance emerges from this definition of space. Indeed, according to the ideas developed in Einstein's vulgarization work \textit{Relativity: The Special and General Theory}~\cite{Einstein1916}, we consider that distance and duration are actually no fundamental notions but have to be defined on an empirical basis. Distance and duration are measured using physical apparatus like rods or clocks, and their theoretical definition must rely on a theoretical modeling of these apparatus and of the observer making use of them. These concepts will emerge from the evolution equation \ref{Schrödinger equation} and from the expression of the Hamiltonian operator defined in sections \ref{Kinetic energy Hamiltonian} and \ref{QED interaction Hamiltonian}. According to this expression, we will see that space has a toroidal structure, i.e. that opposite points on the boundary of the lattice $\FL$ are actually nearest neighbors. This boundary is also a mere artifact, like the boundary of a world map, and doesn't represent in any way the ``frontier of the universe''. The physical constant $\a$ in the expression of the interaction Hamiltonian plays the role of the lattice step, i.e. of the distance between nearest neighbors. It is supposed to be very small ($\lesssim~10^{-20}~\mathrm m$) and hasn't yet been measured experimentally either.
-
-\paragraphtitle{Complements} We could equivalently postulate that, in the Minkowski space-time $(\ST,\stt g)$, defined by:
-\begin{eqnarray*}
-\ST & \eqdef & \IR^4 \\
-\stt g & \eqdef & diag(1,-1,-1,-1) \\
-\stv x \stsp \stv y & \eqdef & \sttll g \mu \nu \stvh x \mu \stvh y \nu
-\end{eqnarray*}
-elementary particles cannot occupy an arbitrary point of space but are bounded to a finite set of $(1+2 \N)^3$ world lines $\wl \n$ forming in some reference frame a finite lattice of step $\a$:
-\begin{eqnarray*}
-\wlt \n \tau & \eqdef & \matrix{\c \tau \\ \a \n} \\
-\n & \in & \FL
-\end{eqnarray*}
-
-In a reference frame moving with a velocity $\sv v$ relative to the lattice, the space-time coordinates of these world lines would be given (up to a translation of the origin) by:
-\begin{eqnarray*}
-\wltp \n t & = & \matrix{\c t \\ \a  \n_\perp + \gamma^{-1} \a  \n_\parallel - \sv v t} \\
-\gamma & \eqdef & \frac 1 {\sqrt{1 - (v / \c)^2}}
-\end{eqnarray*}
-where we use the notations $\n_\parallel \eqdef ( \n \ssp \sv v ) \sv v / v^2$ and $\n_\perp \eqdef \n - \n_\parallel$.
-
-The lattice reference frame itself as well as the physical constants $\N$ and $\a$ are free parameters of the theory. As a working hypothesis, we will assume that the lattice reference frame corresponds to a rest frame of the cosmic microwave background radiation. The relative velocity $\sv v$ of the sun relative to the lattice would then verify~\cite{Kogut1993}:
-\begin{equation*}
-v \approx 3.7~10^5\ \mathrm m / \mathrm s
-\end{equation*}
-We will also assume that the lattice step is of the order of the Plank length:
-\begin{equation*}
-\a \sim \sqrt{4\pi\G \h/\c^3}\approx1.4~10^{-34}\ \mathrm m
-\end{equation*}
-and that the lattice size is of the order of the Hubble length~\cite{Freedman2001}:
-\begin{eqnarray*}
-(1+2 \N) \a & \sim & \RH\approx1.3\ 10^{26}\ \mathrm m\\
-\N & \sim & 4.6~10^{59}
-\end{eqnarray*}
-Incidentally, with this values, the cosmological constant of the $\Lambda$-Cold Dark Matter model of Big-Bang cosmology coincides numerically (with a relative error of only 8\%) with~\cite{Komatsu2010}:
-\begin{equation*}
-\rho_{vac} \sim 2 \N \frac{\h \c}{\a} \left( ( 1 + 2 \N ) \a \right)^{-3} \approx 5.6~10^{-10}\ \mathrm J / \mathrm m^3
-\end{equation*}
-Deriving such a relation, however, isn't the goal of this book.
-
-\section{One particle states}
-
-\paragraphtitle{Particle types} We don't make in this chapter any assumption about the existing particle types, e.g. electrons, positrons and photons. We are noting them $\pt$ in a generic way. The corresponding spin states $\sp$ depend implicitly, in the notations, on the particle type. The spin state influences the way a particle interacts with other particle fields; this effect is described quantitatively in the expression of the spinor operators in appendix \ref{Photon spinors} and \ref{Dirac spinors}.
-
-\paragraphtitle{Definition} The (hypothetical) quantum state $\ket{\Psi}$ in which the universe only contains a single particle, of type $\pt$, at point $\n$ and in the spin state $\sp$, is written:
-\begin{equation*}
-\ket{\Psi} = \ketX 1 \pt \n \sp
-\end{equation*}
-
-We postulate that a one particle state is given by any linear combination of the form:
-\begin{equation*}
-\ket{\Psi} = \sum_{\pt,\n,\sp} \Psi(\bX 1 \pt \n \sp) \ketX 1 \pt \n \sp
-\end{equation*}
-with arbitrary complex coefficients $\Psi(\bX 1 \pt \n \sp)$. The set of all these vectors, taken as an orthonormal basis, forms a finite dimensional Hilbert space written $\Hn 1$ and given by:
-\begin{equation*}
-\Hn 1 \eqdef \bigoplus^\perp_{\pt,\n,\sp} \IC \ketX 1 \pt \n \sp
-\end{equation*}
-
-\paragraphtitle{Momentum representation} We postulate that the momentum $\p$ of a particle in the lattice reference frame can only take values of the form:
-\begin{eqnarray*}
-\p & = & \frac \h \a \q\\
-\q & \in & \FLD
-\end{eqnarray*}
-and that the (hypothetical) quantum state in which the universe only contains a single particle, of type $\pt$, in the spin state $\sp$ with the momentum $\h\q / \a$ in the lattice reference frame, is given by:
-\begin{equation*}
-\ketQ 1 \pt \q \sp \eqdef (1+2 \N)^{-3/2} \sum_{\n} \exp{\i 2 \pi \n \ssp \q} \ketX 1 \pt \n \sp
-\end{equation*}
-
-These vectors form an orthonormal basis of the Hilbert space $\Hn 1$ and we will use the notation:
-\begin{equation*}
-\ket\Psi = \sum_{\pt,\q,\sp} \FT\Psi(\bQ 1 \pt \q \sp) \ketQ 1 \pt \q \sp
-\end{equation*}
-
-\paragraphtitle{Notation} In order to simplify the notations, when defining and using periodical functions on all $\q \in \IR^3$, we will define $\eqp \q \in \left]-\frac 1 2,\frac 1 2\right]^3$ by the equivalence relation $\eqp \q - \q \in \IZ^3$. We have then in particular $\eqp \q = \q$ for all $\q \in \FLD$ and $\eqp \q \in \FLD$ for all $\q \in \ILD$.
-
-\section{Position and momentum operators}
-
-\paragraphtitle{Definition} In the lattice reference frame, we define on $\Hn 1$ the position and momentum operators by:
-\begin{eqnarray*}
-\Rop \ketX 1 \pt \n \sp & \eqdef & \a \n \ketX 1 \pt \n \sp \\
-\Pop \ketQ 1 \pt \q \sp & \eqdef & \frac \h \a \q \ketQ 1 \pt \q \sp
-\end{eqnarray*}
-
-\paragraphtitle{Remark} This definition of the momentum operator follows the same principle as the SLAC derivative~\cite{Rabin1981}, but can be expressed as a proper eigenvalue equation, since momentum eigenstates are well-defined on a finite lattice.
-
-\paragraphtitle{Complements} In another reference frame, moving with a velocity $\sv v$ relative to the lattice, these operators are given (up to a translation of the origin) by:
-\begin{eqnarray*}
-\Rop \ketX 1 \pt \n \sp & \eqdef & \left( \a \n_\perp + \gamma^{-1} \a  \n_\parallel - \sv v t \right) \ketX 1 \pt \n \sp \\
-\Pop \ketQ 1 \pt \q \sp & \eqdef & \left( \frac \h \a \q_\perp + \gamma \frac \h \a \q_\parallel - \gamma \frac {\Ek \pt \q} {\c^2} \sv v \right) \ketQ 1 \pt \q \sp
-\end{eqnarray*}
-where $\Ek \pt \q$ is the kinetic energy of the particle in the lattice reference frame, defined as a function of its (bare) rest mass $\mp \pt$ by:
-\begin{equation*}
-\Ek \pt \q \eqdef \sqrt{\left( \mp \pt \c^2 \right)^2 + \left( \frac{\h \c}{\a} \eqp \q \right)^2}
-\end{equation*}
-Similarly, we define the relativistic factors $\bk \pt \q$ and $\gk \pt \q$, with the help of the reduced mass $\mpr \pt \eqdef \mp \pt \a \c / \h$, by:
-\begin{equation*}
-\bk \pt \q \eqdef \frac{\eqp \q}{\sqrt{\mpr \pt^2 + \eqp \q^2}}
-\end{equation*}
-\begin{equation*}
-\gk \pt \q \eqdef \sqrt{1 + \left( \frac{\eqp \q}{\mpr \pt} \right)^2}
-\end{equation*}
-and the velocity by $\vk \pt \q \eqdef \bk \pt \q \c$.
-
-\section{Wave function}
-
-\paragraphtitle{Complements} We can associate following wave function components to each one particle state:
-\begin{equation*}
-\wf \Psi \pt \sp {\sv x} \eqdef (1+2 \N)^{-3/2} \sum_{\q} \FT\Psi(\bQ 1 \pt \q \sp) \exp{\i 2 \pi \frac{\sv x \ssp \q}{\a}}
-\end{equation*}
-Eigenstates of the momentum operator are thus associated with plane waves on $\IR^3$. Equivalently, we can write:
-\begin{eqnarray*}
-\wf \Psi \pt \sp {\sv x} & = & \sum_{\n} \Psi(\bX 1 \pt \n \sp) \deltaX{\sv x - \a \n} \\
-\deltaX{\sv x} & \eqdef & (1+2 \N)^{-3} \prod_i \frac{\sin{\pi \svc x i / \a}}{\sin{\pi \svc x i / (1+2 \N)\a}}
-\end{eqnarray*}
-We define thus an isomorphism between a finite set, indexed on $( \pt,\sp )$, of complementary subspaces of $\Hn 1$, and a finite dimensional subspace of $\mathrm C^\infty\left(\IR^3,\IC\right)$ containing functions of period $(1+2\N)\a$ along each coordinate.
-
-In that space, the (image of the) momentum operator acts according to:
-\begin{equation*}
-\Pop \wf \Psi \pt \sp {\sv x} = \frac{\h}{\i 2 \pi} \sv \nabla \wf \Psi \pt \sp {\sv x}
-\end{equation*}
-The dynamic of the free fields on the lattice is also identical to the usual dynamic of the free fields on the continuum in the box $\left]-(\N+\frac 1 2)\a,(\N+\frac 1 2)\a\right[^3$ with periodical boundary conditions.
-
-\section{Many particles states}
-\label{Many particles states}
-
-The quantum state $\ket{\Psi}$ in which each point $\n$ is being occupied by $\bX N \pt \n \sp$ particles of each type $\pt$ in each spin state $\sp$ is written:
-\begin{equation*}
-\ket{\Psi} = \ketFX N \pt \n \sp
-\end{equation*}
-and is called a ``localized state''. We postulate that a many particles state is given by any linear combination of the form:
-\begin{eqnarray*}
-\ket{\Psi} & = & \sum_{\bFX N \pt \n \sp} \Psi \left(\bFX N \pt \n \sp \right) \ketFX N \pt \n \sp \\
-\bX N \pt \n \sp & \in & \IntRange{0}{\M \pt}
-\end{eqnarray*}
-where the (finite) integer $\M \pt$ is the maximum occupation number of the field $\pt$.
-
-The set of all these vectors, taken as an orthonormal basis, forms a finite dimensional Hilbert space given by:
-\begin{equation*}
-\H \eqdef \bigoplus^\perp_{\bFX N \pt \n \sp} \IC \ketFX N \pt \n \sp
-\end{equation*}
-and the basis of the localized states is called ``position basis''.
-
-\paragraphtitle{Remark} For fermions, we have experimentally $\M \pt = 1$. For bosons, no upper limit of the occupation number is experimentally known; a lower limit of about $\M \photon \gtrsim 10^{21}$ for photons has been reached experimentally by high intensity lasers.
-
-\section{Creation and annihilation operators}
-
-\paragraphtitle{Definition} The annihilation operators are given by:
-\begin{equation*}
-\aop \pt \n \sp \ket{\bFX N \pt \n \sp} \eqdef \begin{cases}
-\ket{\bFX N \pt \n \sp - \bX 1 \pt \n \sp} & \text{if $\bX N \pt \n \sp > 0$} \\
-0 & \text{otherwise}
-\end{cases}
-\end{equation*}
-and the creation operators by:
-\begin{equation*}
-\cop \pt \n \sp \ket{\bFX N \pt \n \sp} \eqdef \begin{cases}
-\ket{\bFX N \pt \n \sp + \bX 1 \pt \n \sp} & \text{if $\bX N \pt \n \sp < \M \pt$} \\
-0 & \text{otherwise}
-\end{cases}
-\end{equation*}
-
-The (hypothetical) state of the universe in which no particles are present is written:
-\begin{equation*}
-\ket \Psi = \ket{\vac} \eqdef \ket{\bFX 0 \pt \n \sp}
-\end{equation*}
-
-\paragraphtitle{Remark} The annihilation (resp. creation) operators form a (finite) set of generators of a commutative algebra $\aAlg$ (resp. $\cAlg$). Any state of the universe can be obtained by applying creation operators on the vacuum according to:
-\begin{eqnarray*}
-\ket{\Psi} & = & \dop{\Psi} \ket{\vac} \\
-\dop{\Psi} & \eqdef & \sum_{\bFX N \pt \n \sp} \Psi \left(\bFX N \pt \n \sp \right) \prod_{\pt,\n,\sp} \left( \cop \pt \n \sp \right)^{\bX N \pt \n \sp}
-\end{eqnarray*}
-associating thus an operator $\dop{\Psi} \in \cAlg$ to each vector $\ket{\Psi} \in \H$ canonically.
-
-\paragraphtitle{Commentaries} We are defining here at purpose very basic creation and annihilation operators. The normalization factor relevant for boson fields and the antisymmetry factor relevant for fermion fields are included explicitly in the interaction Hamiltonian, e.g. in the photon spinor operators defined in appendix \ref{Photon spinors} and in the Dirac spinor operators defined in appendix \ref{Dirac spinors}.
-
-\section{Plane wave field modes}
-
-\paragraphtitle{Definition} Creation and annihilation operators can also be defined for the plane wave modes of the field by:
-\begin{eqnarray*}
-\aop \pt \q \sp & \eqdef & (1+2 \N)^{-3/2} \sum_{\n} \exp{-\i 2 \pi \n \ssp \q} \aop \pt \n \sp \\
-\cop \pt \q \sp & \eqdef & (1+2 \N)^{-3/2} \sum_{\n} \exp{\i 2 \pi \n \ssp \q} \cop \pt \n \sp
-\end{eqnarray*}
-Note that this definition can be extended to all $\q \in \IR^3$. The plane wave states of the field are then defined by:
-\begin{equation*}
-\ket{\bFQ N \pt \q \sp} \eqdef \prod_{\pt,\q,\sp} \left( \cop \pt \q \sp \right)^{\bQ N \pt \q \sp} \ket{\vac}
-\end{equation*}
-These vectors form an orthonormal basis of the Hilbert space $\H$ called the ``momentum basis'' and we will use the notation:
-\begin{equation*}
-\ket\Psi = \sum_{\bFQ N \pt \q \sp} \FT\Psi \left( \bFQ N \pt \q \sp \right) \ket{\bFQ N \pt \q \sp}
-\end{equation*}
-
-\paragraphtitle{Remark} The decomposition of the plane wave state $\ket{\bFQ {N'} \pt \q \sp}$ on the position basis is given by:
-\begin{eqnarray*}
-\braket{\bFX N \pt \n \sp}{\bFQ {N'} \pt \q \sp} & = & \left[ \prod_{\pt, \sp} \delta\left( {N'}^\pt_\sp - N^\pt_\sp \right) \right] \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) \\
-\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) & \eqdef & \prod_{\substack{\pt, \sp \\ N^\pt_\sp \neq 0}} \frac{(1+2 \N)^{-3 N^\pt_\sp / 2} }{\prod_{\n} \bX N \pt \n \sp !} \sum_{\sigma \in \mathfrak{S}_{N^\pt_\sp}} \prod_{j = 1}^{N^\pt_\sp} \exp{\i 2 \pi \n^{\pt, \sp}_{\sigma_j} \ssp \q^{\pt, \sp}_j}
-\end{eqnarray*}
-where we use the notations ${N'}^\pt_\sp \eqdef \sum_{\q} \bQ {N'} \pt \q \sp$ and $N^\pt_\sp \eqdef \sum_{\n} \bX N \pt \n \sp$, where $\mathfrak{S}_{N^\pt_\sp}$ denotes the symmetric group of order $N^\pt_\sp$ and where we have chosen for each mode $( \pt, \sp )$ of the field the families $( \n^{\pt, \sp}_j )$ and $( \q^{\pt, \sp}_j )$ such as:
-\begin{eqnarray*}
-\ket{\bFX N \pt \n \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\n^{\pt, \sp}_j} \sp \ket{\vac} \\
-\ket{\bFQ {N'} \pt \q \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\q^{\pt, \sp}_j} \sp \ket{\vac}
-\end{eqnarray*}
-In the definition of $\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right)$, we used for convenience the symbols $\bX N \pt \n \sp$ and $N^\pt_\sp$, which can be defined as a function of $( \n^{\pt, \sp}_j )$ with $\bX N \pt \n \sp \eqdef \left|  \{ j | \n^{\pt, \sp}_j = \n \} \right|$.
-
-\section{Particle number operators}
-
-\paragraphtitle{Definition} The particle number operators are defined by:
-\begin{eqnarray*}
-\Nop \pt \n \sp \ket{\bFX N \pt \n \sp} & \eqdef & \bX N \pt \n \sp \ket{\bFX N \pt \n \sp} \\
-\Nop \pt \q \sp \ket{\bFQ N \pt \q \sp} & \eqdef & \bQ N \pt \q \sp \ket{\bFQ N \pt \q \sp}
-\end{eqnarray*}
-The total particle number operator is defined as the (finite) sum:
-\begin{equation*}
-\op N \eqdef \sum_{\pt,\n,\sp} \Nop \pt \n \sp = \sum_{\pt,\q,\sp} \Nop \pt \q \sp
-\end{equation*}
-Its eigenspace for the eigenvalue $N$ is written $\Hn N$ and its elements are called ``$N$ particle states'' of the field. The Hilbert space can be decomposed as a (finite) sum of the form:
-\begin{equation*}
-\H = \bigoplus_{N}^\perp \Hn N
-\end{equation*}
-The maximum number of particles in a $N$ particle state is given by $N = (1+2 \N)^3 \sum_{\pt,\sp} \M \pt$.
-
-\chapter{Hamiltonian evolution}
-\label{Hamiltonian evolution}
-
-\section{Schrödinger equation}
-\label{Schrödinger equation}
-
-We postulate that the state of the quantum field evolves according to an equation of the form:
-\begin{equation*}
-\ddt \ket\Psi = -\i 2 \pi \frac 1 \h \Hop \ket\Psi
-\end{equation*}
-called ``Schrödinger equation'' where $\Hop$ is the (time independent) Hamiltonian operator of the field. This operator is supposed to be hermitian and is therefore diagonalizable (with real eigenvalues) on the finite dimensional Hilbert space $\H$. The equation can also be integrated as:
-\begin{eqnarray*}
-\ket{\Psi(t)} & = & \Uop t {t_0} \ket{\Psi(t_0)} \\
-\Uop t {t_0} & \eqdef & \exp{- \i 2 \pi \frac{t - t_0} \h \Hop}
-\end{eqnarray*}
-
-\section{Kinetic energy Hamiltonian}
-\label{Kinetic energy Hamiltonian}
-
-The Hamiltonian operator of the field can be separated into a kinetic energy Hamiltonian depending only on the momentum of the particles and an interaction term as follows:
-\begin{equation*}
-\Hop = \Hop_0 + \Hop'
-\end{equation*}
-In the lattice reference frame, the kinetic energy Hamiltonian is given by:
-\begin{equation*}
-\Hop_0 \eqdef \sum_{\pt,\q,\sp} \Ek \pt \q \Nop \pt \q \sp
-\end{equation*}
-
-In another reference frame, moving with a velocity $\sv v$ relative to the lattice, this operator is given by:
-\begin{equation*}
-\Hop_0 \eqdef \sum_{\pt,\q,\sp} \gamma \left\{ \Ek \pt \q - \frac \h \a \q \ssp \sv v \right\} \Nop \pt \q \sp
-\end{equation*}
-
-\section{Interaction picture}
-
-The kinetic energy Hamiltonian can be integrated as:
-\begin{equation*}
-\UopK t {t_0} \eqdef \exp{- \i 2 \pi \frac{t - t_0} \h \Hop_0}
-\end{equation*}
-
-The state of the quantum field in the interaction picture is defined in such a way that it would be a time constant if the interaction term $\Hop'$ vanishes:
-\begin{equation*}
-\ket{\Psi_\I} \eqdef \UopK 0 t \ket{\Psi}
-\end{equation*}
-
-The Hamiltonian operator in the interaction picture is defined is such a way that the state of the quantum field in the interaction picture obeys following Schrödinger-like equation, where the Hamiltonian is time-dependent:
-\begin{eqnarray*}
-\ddt \ket{\Psi_\I} & = & -\i 2 \pi \frac 1 \h \Hop_\I \ket{\Psi_\I} \\
-\Hop_\I & \eqdef & \UopK 0 t \Hop' \UopK t 0
-\end{eqnarray*}
-
-The integration of this equation yields to:
-\begin{equation*}
-\ket{\Psi_\I(t)} = \UopI t {t_0} \ket{\Psi_I({t_0})} \\
-\end{equation*}
-where the evolution operator in the interaction picture is given by a series of the form (assuming $t > t_0$):
-\begin{eqnarray*}
-\UopI t {t_0} & \eqdef & \Id + \sum_{n=1}^\infty \UopIn n t {t_0} \\
-\UopIn n t {t_0} & \eqdef & \left( \frac{-\i 2 \pi} \h \right)^n \int_{t > t_n > \dotsb > t_1 > t_0} \dt_1 \dotsm \dt_n \\
-&& \UopK 0 {t_n} \Hop' \UopK {t_n} {t_{n-1}} \dotsm \UopK {t_2} {t_1} \Hop' \UopK {t_1} 0
-\end{eqnarray*}
-The evolution operator in the interaction picture verifies:
-\begin{equation*}
-\UopI t {t_0} = \UopK 0 t \Uop t {t_0} \UopK {t_0} 0
-\end{equation*}
-The usual evolution operator can also be written too as a series of the form:
-\begin{eqnarray*}
-\Uop t {t_0} & \eqdef & \sum_{n=0}^\infty \Uopn n t {t_0} \\
-\Uopn 0 t {t_0} & \eqdef & \UopK t {t_0} \\
-\Uopn n t {t_0} & \eqdef & \left( \frac{-\i 2 \pi} \h \right)^n \int_{t > t_n > \dotsb > t_1 > t_0} \dt_1 \dotsm \dt_n \\
-&& \UopK t {t_n} \Hop' \UopK {t_n} {t_{n-1}} \dotsm \UopK {t_2} {t_1} \Hop' \UopK {t_1} {t_0}
-\end{eqnarray*}
-
-\section{Transition amplitudes}
-
-In scattering experiments, the evolution operator in the interaction picture is often called ``scattering operator''. In this context, cross sections are usually calculated in the limit $t_0 \to - \infty$ and $t \to + \infty$, so the variables $t_0$ and $t$ are implicit in the notation:
-\begin{equation*}
-\Sop \eqdef \UopI t {t_0}
-\end{equation*}
-Its matrix elements, called ``scattering amplitudes'' and written:
-\begin{eqnarray*}
-\Sm f i & \eqdef & \bra{\Psi_f} \Sop \ket{\Psi_i} \\
-& = & \bra{\Psi_f} \UopI t {t_0} \ket{\Psi_i}
-\end{eqnarray*}
-can be developed in a series of the form (assuming $t > t_0$):
-\begin{eqnarray*}
-\Sm f i & = & \sum_{n=0}^\infty \Smn f i n \\
-\Smn f i 0 & \eqdef & \braket{\Psi_f}{\Psi_i} \\
-\Smn f i n & \eqdef & \left( \frac{-\i 2 \pi} \h \right)^n \int_{t > t_n > \dotsb > t_1 > t_0} \dt_1 \dotsm \dt_n \\
-&& \bra{\Psi_f} \UopK 0 {t_n} \Hop' \UopK {t_n} {t_{n-1}} \dotsm \UopK {t_2} {t_1} \Hop' \UopK {t_1} 0 \ket{\Psi_i}
-\end{eqnarray*}
-For plane wave states $\ket{\Psi_i} = \ket{\bFQ {N_i} \pt \q \sp}$ and $\ket{\Psi_f} = \ket{\bFQ {N_f} \pt \q \sp}$, they are directly related to the matrix elements of the evolution operator, called ``transition amplitudes'', by:
-\begin{eqnarray*}
-\Um f i t {t_0} & = & \exp{-\i 2 \pi ( t E_f - t_0 E_i ) / \h} \Sm f i \\
-\Um f i t {t_0} & \eqdef & \bra{\Psi_f} \Uop t {t_0} \ket{\Psi_i} \\
-E_i & \eqdef & \bra{\Psi_i} \Hop_0 \ket{\Psi_i} \\
-E_f & \eqdef & \bra{\Psi_f} \Hop_0 \ket{\Psi_f}
-\end{eqnarray*}
-The transition amplitude from a plane wave state $\ket{\Psi_i} = \ket{\bFQ {N_i} \pt \q \sp}$ to a localized state $\ket{\Psi_f} = \ket{\bFX {N_f} \pt \n \sp}$ can in turn be written as:
-\begin{equation*}
-\Um f i t {t_0} = \sum_{\bFQ {N_f} \pt \q \sp} \Sm f i \exp{\i 2 \pi t_0 E_i / \h} \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ), t \right)
-\end{equation*}
-with:
-\begin{multline*}
-\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ), t \right) \eqdef \prod_{\substack{\pt, \sp \\ {N_f}^\pt_\sp \neq 0}} \frac{(1+2 \N)^{-3 {N_f}^\pt_\sp / 2} }{\prod_{\n} \bX {N_f} \pt \n \sp !} \sum_{\sigma \in \mathfrak{S}_{{N_f}^\pt_\sp}} \prod_{j = 1}^{{N_f}^\pt_\sp} \\
-\exp{\i 2 \pi ( \n^{\pt, \sp}_{\sigma_j} \ssp \q^{\pt, \sp}_j - \Ek \pt {\q^{\pt, \sp}_j} t / \h )}
-\end{multline*}
-where the summation runs over plane wave states $\bFQ {N_f} \pt \q \sp$ such as $\sum_{\q} \bQ {N_f} \pt \q \sp = \sum_{\n} \bX {N_f} \pt \n \sp$ for each mode $( \pt, \sp )$ of the field, where we use the notations $\Sm f i \eqdef \bra{\bFQ {N_f} \pt \q \sp} \Sop \ket{\bFQ {N_i} \pt \q \sp}$ and ${N_f}^\pt_\sp \eqdef \sum_{\n} \bX {N_f} \pt \n \sp$, where $\mathfrak{S}_{{N_f}^\pt_\sp}$ denotes the symmetric group of order ${N_f}^\pt_\sp$ and where we have chosen for each mode $( \pt, \sp )$ of the field the families $( \n^{\pt, \sp}_j )$ and $( \q^{\pt, \sp}_j )$ such as:
-\begin{eqnarray*}
-\ket{\bFX {N_f} \pt \n \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\n^{\pt, \sp}_j} \sp \ket{\vac} \\
-\ket{\bFQ {N_f} \pt \q \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\q^{\pt, \sp}_j} \sp \ket{\vac}
-\end{eqnarray*}
-In the definition of $\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ), t \right)$, we used for convenience the symbols $\bX {N_f} \pt \n \sp$ and ${N_f}^\pt_\sp$, which can be defined as a function of $( \n^{\pt, \sp}_j )$ with $\bX {N_f} \pt \n \sp \eqdef \left|  \{ j | \n^{\pt, \sp}_j = \n \} \right|$.
-
-The transition amplitude from any initial state $\ket{\Psi_i}$ to a localized final state $\ket{\Psi_f} = \ket{\bFX {N_f} \pt \n \sp}$ is finally given by:
-\begin{equation*}
-\Um f i t {t_0} = \sum_{\bFQ {N_i} \pt \q \sp} \sum_{\bFQ {N_f} \pt \q \sp} \Sm f i \FT{\Psi_i} \left( \bFQ {N_i} \pt \q \sp \right) \exp{\i 2 \pi t_0 E_i / \h} \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ), t \right)
-\end{equation*}
-with the same notations.
-
-\section{Scattering matrix}
-\label{Scattering matrix}
-
-The scattering matrix can be developed quite easily on the basis of the plane wave states, i.e. by developing the initial and final states as:
-\begin{eqnarray*}
-\ket{\Psi_i} & = & \sum_{\bFQ N \pt \q \sp} \FT{\Psi_i} \left( \bFQ N \pt \q \sp \right) \ket{\bFQ N \pt \q \sp} \\
-\ket{\Psi_f} & = & \sum_{\bFQ N \pt \q \sp} \FT{\Psi_f} \left( \bFQ N \pt \q \sp \right) \ket{\bFQ N \pt \q \sp}
-\end{eqnarray*}
-
-With these notations, we have to the zeroth order:
-\begin{equation*}
-\Smn f i 0 = \sum_{\bFQ {N_0} \pt \q \sp} \cc{\FT{\Psi_f} \left( \bFQ {N_0} \pt \q \sp \right) } \FT{\Psi_i} \left( \bFQ {N_0} \pt \q \sp \right)
-\end{equation*}
-and to the n-th order:
-\begin{eqnarray*}
-\Smn f i n & = & \sideset{}{_{k=0}^n}\sum_{\bFQ {N_k} \pt \q \sp} \cc{\FT{\Psi_f} \left( \bFQ {N_n} \pt \q \sp \right) } \FT{\Psi_i} \left( \bFQ {N_0} \pt \q \sp \right) \Smp n {n,\dotsc,0} \\
-\Smp n {n,\dotsc,0} & \eqdef & \exp{\i 2 \pi \frac{t_0} \h ( E_n - E_0 )} \left( \prod_{k=1}^n H'_{k,k-1} \right) \SmE n {E_n, \dotsc, E_0}
-\end{eqnarray*}
-\begin{multline*}
-\SmE n {E_n, \dotsc, E_0} \eqdef \left( \frac{-\i 2 \pi} \h \right)^n \int_{t - t_0 > t_n > \dotsb > t_1 > 0} \\
-\prod_{k=1}^n \exp{\i 2 \pi \frac{t_k} \h ( E_k - E_{k - 1} )} \dt_n \dotsm \dt_1
-\end{multline*}
-The functions $\SmE n {E_n, \dotsc, E_0}$ can be calculated recursively according to:
-\begin{equation*}
-\SmE 1 {E_1, E_0} = -\i 2 \pi \frac{t - t_0} \h \esinc{\frac{t - t_0} \h ( E_1 - E_0 )}
-\end{equation*}
-\begin{multline*}
-\SmE{n + 1}{E_{n + 1}, E_n, \dotsc, E_0} = \frac 1 {E_{n + 1} - E_n} \left( \SmE n {E_{n + 1}, \dotsc, E_0} \right. \\
-\left. - \exp{\i 2 \pi \frac{t - t_0} \h ( E_{n + 1} - E_n )} \SmE n {E_n, \dotsc, E_0} \right)
-\end{multline*}
-where the esinc function is defined as in appendix \ref{esinc}. To the second order, for instance, we have:
-\begin{multline*}
-\SmE 2 {E_2, E_1, E_0} = -\i 2 \pi \frac{t - t_0} \h \exp{\i \pi \frac{t - t_0} \h ( E_2 - E_0 )} \frac 1 {E_2 - E_1} \\
-\left[ \sinc{\frac{t - t_0} \h ( E_2 - E_0 )} - \exp{\i \pi \frac{t - t_0} \h ( E_2 - E_1 )} \sinc{\frac{t - t_0} \h ( E_1 - E_0 )} \right]
-\end{multline*}
-where the sinc function is defined as in appendix \ref{sinc}.
-
-\section{Perturbative development}
-
-The explicit perturbative development of the transition amplitude between two plane wave states $\ket{\Psi_i} = \ket{\bFQ {N_i} \pt \q \sp}$ and $\ket{\Psi_f} = \ket{\bFQ {N_f} \pt \q \sp}$ is therefore given by:
-\begin{equation*}
-\Umn f i 0 t {t_0} = \exp{-\i 2 \pi \frac{t - t_0} \h E_f} \delta_{f,i}
-\end{equation*}
-\begin{equation*}
-\Umn f i 1 t {t_0} = -\i 2 \pi \frac{t - t_0} \h \exp{-\i \pi \frac{t - t_0} \h ( E_f + E_i )} \sinc{\frac{t - t_0} \h ( E_f - E_i )} H'_{f,i}
-\end{equation*}
-\begin{equation*}
-\Umn f i n t {t_0} = \exp{-\i 2 \pi \frac{t - t_0} \h E_f} \sideset{}{_{k=0}^n}\sum_{\bFQ {N_k} \pt \q \sp} \SmE n {E_n, \dotsc, E_0} \prod_{k=1}^n H'_{k,k-1}
-\end{equation*}
-where we take in the last sum $\bFQ {N_0} \pt \q \sp = \bFQ {N_i} \pt \q \sp$ and $\bFQ {N_n} \pt \q \sp = \bFQ {N_f} \pt \q \sp$ and where we have:
-\begin{multline*}
-\SmE n {E_n, \dotsc, E_0} \eqdef \left( \frac{-\i 2 \pi} \h \right)^n \int_{t - t_0 > t_n > \dotsb > t_1 > 0} \\
-\prod_{k=1}^n \exp{\i 2 \pi \frac{t_k} \h ( E_k - E_{k - 1} )} \dt_n \dotsm \dt_1
-\end{multline*}
-
-More generally, the explicit perturbative development of the transition amplitude from any initial state $\ket{\Psi_i}$ to a localized final state $\ket{\Psi_f} = \ket{\bFX {N_f} \pt \n \sp}$ is given by:
-\begin{equation*}
-\Umn f i 0 t {t_0} = \sum_{\bFQ {N_f} \pt \q \sp} \FT{\Psi_i} \left( \bFQ {N_f} \pt \q \sp \right) \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) \exp{-\i 2 \pi \frac{t - t_0} \h E_f}
-\end{equation*}
-\begin{multline*}
-\Umn f i 1 t {t_0} = -\i 2 \pi \frac{t - t_0} \h \sum_{\bFQ {N_i} \pt \q \sp} \FT{\Psi_i} \left( \bFQ {N_i} \pt \q \sp \right) \sum_{\bFQ {N_f} \pt \q \sp} \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) \\
-\exp{-\i \pi \frac{t - t_0} \h ( E_f + E_i )} \sinc{\frac{t - t_0} \h ( E_f - E_i )} H'_{f,i}
-\end{multline*}
-\begin{multline*}
-\Umn f i n t {t_0} = \sum_{\bFQ {N_i} \pt \q \sp} \FT{\Psi_i} \left( \bFQ {N_i} \pt \q \sp \right) \sum_{\bFQ {N_f} \pt \q \sp} \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) \\
-\exp{-\i 2 \pi \frac{t - t_0} \h E_f} \sideset{}{_{k=0}^n}\sum_{\bFQ {N_k} \pt \q \sp} \SmE n {E_n, \dotsc, E_0} \prod_{k=1}^n H'_{k,k-1}
-\end{multline*}
-where the summation runs over plane wave states $\bFQ {N_f} \pt \q \sp$ such as $\sum_{\q} \bQ {N_f} \pt \q \sp = \sum_{\n} \bX {N_f} \pt \n \sp$ for each mode $( \pt, \sp )$ of the field, and where we use the notation:
-\begin{equation*}
-\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) \eqdef \prod_{\substack{\pt, \sp \\ {N_f}^\pt_\sp \neq 0}} \frac{(1+2 \N)^{-3 {N_f}^\pt_\sp / 2} }{\prod_{\n} \bX {N_f} \pt \n \sp !} \sum_{\sigma \in \mathfrak{S}_{{N_f}^\pt_\sp}} \prod_{j = 1}^{{N_f}^\pt_\sp} \exp{\i 2 \pi \n^{\pt, \sp}_{\sigma_j} \ssp \q^{\pt, \sp}_j}
-\end{equation*}
+\input{chapter-hamiltonian-evolution}
